# EyeTrackVR-OpenVR-Calibration-Overlay

./: .gitignore  .gitmodules  CMakeLists.txt  ETVR_SteamVR_Calibration_Overlay.cpp  ETVR_SteamVR_Calibration_Overlay.sln  ETVR_SteamVR_Calibration_Overlay.vcxproj  ETVR_SteamVR_Calibration_Overlay.vcxproj.filters  LICENSE  OpenVR_Overlay_Communication.py  Python_Com.cpp  Python_Com.h  README.md  resource.h
src/: main.cpp  python_com.h
